Background color change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>THE GLCM CALCULATOR</title>
 	<style>
 		body{
-			background-color: #B1624EFF;
+			background-color: #c6d7d6;
 			margin: 100px;
 			height:  200px;
 
