--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 			background-color: #c6d7d6;
 			margin: 100px;
 			height:  200px;
-
+			font-family: Verdana;
+    			font-size: 12px;
 		}
 		button{
 			border: none;
@@ -24,7 +25,7 @@
 	</style>
 </head>
 <body>
-	<h1> The GLCM CALCULATOR !! </h1>
+	<h1>GLCM CALCULATOR</h1>
     <h3>Select a random array to generate desired grey level co-occurence matrix</h3>
 <p>Random matrix generated in defined range.</p>
 <button onclick="document.getElementById('demo').innerHTML = getRndInteger(1,9)">Matrix GL</button>
