--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<script src ="server.js"></script>
-	<title>THE GLCM CALCULATOR</title>
+	<title>GLCM CALCULATOR</title>
 	<style>
 		body{
 			background-color: #c6d7d6;
